--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cypress-match-screenshot",
-  "version": "1.1.0",
+  "name": "@sqs/cypress-match-screenshot",
+  "version": "2.0.0",
   "description": "Utility to take screenshots during a cypress test and match them against previous runs",
   "main": "src/index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/julianburr/cypress-match-screenshot.git"
+    "url": "https://code.squarespace.net/scm/webm/cypress-match-screenshot.git"
   },
   "keywords": [
     "cypress",
@@ -16,11 +16,11 @@
     "diffing"
   ],
   "author": "Julian Burr <hello@julianburr.de>",
+  "contributors": [
+    "Dave Myers <dmyers@squarespace.com>"
+  ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/julianburr/cypress-match-screenshot/issues"
-  },
-  "homepage": "https://github.com/julianburr/cypress-match-screenshot#readme",
+  "homepage": "https://code.squarespace.net/projects/WEBM/repos/cypress-match-screenshot",
   "dependencies": {
     "blink-diff": "^1.0.13",
     "image-size": "^0.6.2",
