--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "Julian Boilen <jboilen@squarespace.com>"
   ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/julianburr/cypress-match-screenshot/issues"
-  },
-  "homepage": "https://github.com/julianburr/cypress-match-screenshot#readme",
+  "homepage": "https://code.squarespace.net/projects/WEBM/repos/cypress-match-screenshot",
   "dependencies": {
     "blink-diff": "^1.0.13",
     "cypress-promise": "^1.0.2",
